{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 31,
  "lineage": "05fa1474-4f6b-d51e-759e-a392b6166fef",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:211125784576:loadbalancer/app/tauri-alb/a8f9b6cde3977137",
            "arn_suffix": "app/tauri-alb/a8f9b6cde3977137",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tauri-alb-318084842.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:211125784576:loadbalancer/app/tauri-alb/a8f9b6cde3977137",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tauri-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-048a94da900289808"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-036c08dab89b354c3"
              },
              {
                "subnet_id": "subnet-060d648e47a7d13f4"
              }
            ],
            "subnets": [
              "subnet-036c08dab89b354c3",
              "subnet-060d648e47a7d13f4"
            ],
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Tauri-Container"
            },
            "vpc_id": "vpc-01507878ecd9a8e9d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:211125784576:listener/app/tauri-alb/a8f9b6cde3977137/705db6e42fc29ba5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:211125784576:targetgroup/tauri-rust-tg/cd1eda1daddfd2b2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:211125784576:listener/app/tauri-alb/a8f9b6cde3977137/705db6e42fc29ba5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:211125784576:loadbalancer/app/tauri-alb/a8f9b6cde3977137",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Tauri-Container"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.app_tg",
            "aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:211125784576:targetgroup/tauri-rust-tg/cd1eda1daddfd2b2",
            "arn_suffix": "targetgroup/tauri-rust-tg/cd1eda1daddfd2b2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:211125784576:targetgroup/tauri-rust-tg/cd1eda1daddfd2b2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tauri-rust-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Tauri-Container"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01507878ecd9a8e9d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125784576:security-group/sg-048a94da900289808",
            "description": "Allow web traffic to Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048a94da900289808",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tauri-alb-sg",
            "name_prefix": "",
            "owner_id": "211125784576",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Tauri-Container"
            },
            "timeouts": null,
            "vpc_id": "vpc-01507878ecd9a8e9d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125784576:security-group/sg-07191b28d014d1234",
            "description": "Allow traffic ONLY from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07191b28d014d1234",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-048a94da900289808"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "tauri-ecs-sg",
            "name_prefix": "",
            "owner_id": "211125784576",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Project": "Tauri-Container"
            },
            "timeouts": null,
            "vpc_id": "vpc-01507878ecd9a8e9d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125784576:network-acl/acl-06f044ad74cad9ef1",
            "default_network_acl_id": "acl-06f044ad74cad9ef1",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-06f044ad74cad9ef1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "211125784576",
            "subnet_ids": [
              "subnet-060d648e47a7d13f4",
              "subnet-071cb54492f74ba36",
              "subnet-08ef66b2e25048a91"
            ],
            "tags": {
              "Name": "tauri-vpc-default"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "tauri-vpc-default",
              "Project": "Tauri-Container"
            },
            "vpc_id": "vpc-01507878ecd9a8e9d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125784576:route-table/rtb-020e12546833dfa0b",
            "default_route_table_id": "rtb-020e12546833dfa0b",
            "id": "rtb-020e12546833dfa0b",
            "owner_id": "211125784576",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "tauri-vpc-default"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "tauri-vpc-default",
              "Project": "Tauri-Container"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-01507878ecd9a8e9d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125784576:security-group/sg-066b646758c27080a",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-066b646758c27080a",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "211125784576",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tauri-vpc-default"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "tauri-vpc-default",
              "Project": "Tauri-Container"
            },
            "vpc_id": "vpc-01507878ecd9a8e9d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091b8098bf35c1a14",
            "arn": "arn:aws:ec2:us-east-1:211125784576:elastic-ip/eipalloc-091b8098bf35c1a14",
            "domain": "vpc",
            "id": "eipalloc-091b8098bf35c1a14",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-243-200-228.compute-1.amazonaws.com",
            "public_ip": "54.243.200.228",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tauri-vpc-us-east-1a"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "tauri-vpc-us-east-1a",
              "Project": "Tauri-Container"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125784576:internet-gateway/igw-07dfc62bb1781881d",
            "id": "igw-07dfc62bb1781881d",
            "owner_id": "211125784576",
            "tags": {
              "Name": "tauri-vpc"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "tauri-vpc",
              "Project": "Tauri-Container"
            },
            "vpc_id": "vpc-01507878ecd9a8e9d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091b8098bf35c1a14",
            "association_id": "eipassoc-05d8222c922398551",
            "connectivity_type": "public",
            "id": "nat-0ef5e5ffc70acac1c",
            "network_interface_id": "eni-019267d3c338abb02",
            "private_ip": "10.0.101.25",
            "public_ip": "54.243.200.228",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-036c08dab89b354c3",
            "tags": {
              "Name": "tauri-vpc-us-east-1a"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "tauri-vpc-us-east-1a",
              "Project": "Tauri-Container"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01d7bf8014856f4961080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ef5e5ffc70acac1c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01d7bf8014856f496",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07dfc62bb1781881d",
            "id": "r-rtb-0ff00a0677ca49a691080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ff00a0677ca49a69",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125784576:route-table/rtb-01d7bf8014856f496",
            "id": "rtb-01d7bf8014856f496",
            "owner_id": "211125784576",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tauri-vpc-private"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "tauri-vpc-private",
              "Project": "Tauri-Container"
            },
            "timeouts": null,
            "vpc_id": "vpc-01507878ecd9a8e9d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125784576:route-table/rtb-0ff00a0677ca49a69",
            "id": "rtb-0ff00a0677ca49a69",
            "owner_id": "211125784576",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tauri-vpc-public"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "tauri-vpc-public",
              "Project": "Tauri-Container"
            },
            "timeouts": null,
            "vpc_id": "vpc-01507878ecd9a8e9d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066e5479558001596",
            "route_table_id": "rtb-01d7bf8014856f496",
            "subnet_id": "subnet-08ef66b2e25048a91"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ede4b4f19faf27f2",
            "route_table_id": "rtb-01d7bf8014856f496",
            "subnet_id": "subnet-071cb54492f74ba36"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04539c0ba87191fd3",
            "route_table_id": "rtb-0ff00a0677ca49a69",
            "subnet_id": "subnet-036c08dab89b354c3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b62eb88b5b901cbd",
            "route_table_id": "rtb-0ff00a0677ca49a69",
            "subnet_id": "subnet-060d648e47a7d13f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125784576:subnet/subnet-08ef66b2e25048a91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ef66b2e25048a91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125784576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tauri-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "tauri-vpc-private-us-east-1a",
              "Project": "Tauri-Container"
            },
            "vpc_id": "vpc-01507878ecd9a8e9d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125784576:subnet/subnet-071cb54492f74ba36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071cb54492f74ba36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125784576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tauri-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "tauri-vpc-private-us-east-1b",
              "Project": "Tauri-Container"
            },
            "vpc_id": "vpc-01507878ecd9a8e9d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125784576:subnet/subnet-036c08dab89b354c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036c08dab89b354c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125784576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tauri-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "tauri-vpc-public-us-east-1a",
              "Project": "Tauri-Container"
            },
            "vpc_id": "vpc-01507878ecd9a8e9d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125784576:subnet/subnet-060d648e47a7d13f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060d648e47a7d13f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125784576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tauri-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "tauri-vpc-public-us-east-1b",
              "Project": "Tauri-Container"
            },
            "vpc_id": "vpc-01507878ecd9a8e9d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125784576:vpc/vpc-01507878ecd9a8e9d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06f044ad74cad9ef1",
            "default_route_table_id": "rtb-020e12546833dfa0b",
            "default_security_group_id": "sg-066b646758c27080a",
            "dhcp_options_id": "dopt-0aff9b72479c7cbad",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01507878ecd9a8e9d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-020e12546833dfa0b",
            "owner_id": "211125784576",
            "tags": {
              "Name": "tauri-vpc"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "tauri-vpc",
              "Project": "Tauri-Container"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}